# Batch60Notes

./: Batch60CustomTyped.hs  Batch60FirstContract.hs  Batch60FirstRedeemer.hs  Batch60ParametrizedContract.hs  Batch60TypedValidator.hs  LICENSE  README.md  gpt_llm_trainer_v2,_with_GPT_3_5_Fine_Tuning.ipynb  redisdemo.ipynb
MathBounty/: MathBounty.cabal
MathBounty/src/: Batch60GuessingGame.hs  Batch60MathBounty.hs  Batch60NFTBounty.hs
NativeTokens/: CHANGELOG.md  NativeTokens.cabal  cabal.project
NativeTokens/src/: Batch60DeadlineMinting.hs  Batch60FreeMinting.hs  Batch60NftMinting.hs  Batch60SignedMinting.hs
PlutusMonads/: PlutusMonads.cabal  cabal.project
PlutusMonads/src/: Batch60VestingContract.hs
paramTestnet/test/: benef1.addr  benef1.pkh  benef1.skey  benef1.vkey
